Check download/upload speed from dataengine in QML code

Moving it from the model allows us to stop checking for changes when the
applet is collapsed.

BUG:333752